testsuite/tests/lexical_envs/invalid_subunit_root/multiple_lists.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- ListOfExample+(Example("example"))
}

class FooNode implements Node[FooNode] {
}

@ple_unit_root class Example: FooNode {
}

class ListOfExample: ASTList[Example] {
}
